syntax = "proto3";
option csharp_namespace = "GrpcCL";
package sep3.g3;
import "google/protobuf/timestamp.proto";

message FPByUsernameRequest {
  string username = 1;
}

message FoodPostRequest {
  string title = 1;
  string category_ = 2;
  string description = 3;
  string pictureUrl = 4;
  int32 daysUntilExpired = 5;
  Date startDate = 6;
  Date endDate = 7;
  Time startTime = 8;
  Time endTime = 9;
  string username = 10;
}

message Date {
  int32 day = 1;
  int32 month = 2;
  int32 year = 3;
}

message Time {
  int32 hour = 1;
  int32 minutes = 2;
}

message FoodPostResponse {
  int32 fp_id = 1;
  string title = 2;
  string category_ = 3;
  string description = 4;
  string pictureUrl = 5;
  int32 daysUntilExpired = 6;
  string fp_state = 7;
  google.protobuf.Timestamp timestamp_posted = 8;
  Date startDate = 9;
  Date endDate = 10;
  Time startTime = 11;
  Time endTime = 12;
  string username = 13;
  
}

message GetAllRequest {
  bool filler = 1;
}
message FoodPostID
{
  int32 id=1;
}

message FoodPostReservation
{
  string username = 1;
  int32 foodpost_id = 2;
}

message ReservationResponse {
  bool filler = 1;
}
message PickUpRequest{
  int32 id=1;
  string username=2;
}

message ReportMessage
{
  int32 post_id=1;
  string comment =2;
  string username_reporting=3;
}

service FoodPostService {
  rpc getFoodPostsByUsername(FPByUsernameRequest) returns (stream FoodPostResponse);
  rpc post(FoodPostRequest) returns (FoodPostResponse);
  rpc getAllFoodPosts(GetAllRequest) returns (stream FoodPostResponse);
  rpc getSingleFoodPost(FoodPostID) returns (FoodPostResponse);
  rpc reserve(FoodPostReservation) returns (ReservationResponse);
  rpc pickUp(PickUpRequest) returns(FoodPostResponse);
  rpc delete(FoodPostID) returns (ReservationResponse);
  rpc report(ReportMessage) returns(ReportMessage);
}